--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack serve",
+    "start": "cross-env SERVE=true webpack serve",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "build-dev": "webpack"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
